--- a/modules/_constants_unique_.html
+++ b/modules/_constants_unique_.html
@@ -82,7 +82,7 @@
 					GNU General Public License for more details.</p>
 					<p>You should have received a copy of the GNU General Public License
 					along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>
-					<p>Author: Nelio Santos <a href="mailto:&#x6e;&#115;&#102;&#105;&#x6c;&#x68;&#x6f;&#x40;&#x69;&#x63;&#108;&#x6f;&#x75;&#x64;&#46;&#x63;&#111;&#x6d;">&#x6e;&#115;&#102;&#105;&#x6c;&#x68;&#x6f;&#x40;&#x69;&#x63;&#108;&#x6f;&#x75;&#x64;&#46;&#x63;&#111;&#x6d;</a></p>
+					<p>Author: Nelio Santos <a href="mailto:&#x6e;&#x73;&#102;&#105;&#x6c;&#x68;&#111;&#x40;&#105;&#99;&#108;&#111;&#117;&#100;&#x2e;&#x63;&#111;&#109;">&#x6e;&#x73;&#102;&#105;&#x6c;&#x68;&#111;&#x40;&#105;&#99;&#108;&#111;&#117;&#100;&#x2e;&#x63;&#111;&#109;</a></p>
 				</div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">UNIQUE_<wbr>POOLING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = process.env.UNIQUE_POOLING ? parseInt(process.env.UNIQUE_POOLING, 10) : 1 * 1000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/nsfilho/uniqueExecution/blob/3953438/src/constants/unique.ts#L28">constants/unique.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/nsfilho/uniqueExecution/blob/37afea3/src/constants/unique.ts#L28">constants/unique.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">UNIQUE_<wbr>START_<wbr>DELAY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = process.env.UNIQUE_START_DELAY? parseInt(process.env.UNIQUE_START_DELAY, 10): 1 * 1000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/nsfilho/uniqueExecution/blob/3953438/src/constants/unique.ts#L23">constants/unique.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/nsfilho/uniqueExecution/blob/37afea3/src/constants/unique.ts#L23">constants/unique.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
