deploy: e5a63dbe522d89bfd8126aa972d3a5e06dd215fc

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 				</a>
 				<p>A very simple and small services to guarantee a <code>Unique Execution</code> of some piece of code (async) in
 				a javascript / typescript applications.</p>
-				<p>Project licensed under: GPLv3</p>
+				<ul>
+					<li>Project licensed under: GPLv3</li>
+					<li>Site Documentation: <a href="https://nsfilho.github.io/uniqueExecution/index.html">Homepage</a></li>
+					<li>Repository: <a href="https://github.com/nsfilho/uniqueExecution.git">GitHub</a></li>
+				</ul>
 				<a href="#environment-variables" id="environment-variables" style="color: inherit; text-decoration: none;">
 					<h2>Environment Variables</h2>
 				</a>
